--- a/WTO/Views/Partial/Notification/NotificationRelatedMaterial.cshtml
+++ b/WTO/Views/Partial/Notification/NotificationRelatedMaterial.cshtml
@@ -204,8 +204,7 @@
        $(".date-picker").datepicker({
            changeMonth: true,
            changeYear: true,
-           dateFormat: 'dd M yy',
-           minDate: 0
+           dateFormat: 'dd M yy'
        });
    });
 </script>
