--- a/WTO/Views/MoM/Add.cshtml
+++ b/WTO/Views/MoM/Add.cshtml
@@ -19,13 +19,16 @@
                         </div>
                     </div>
                 </div>
-
             </div>
 
             <div class="col-xs-12 col-sm-12 col-md-12 top-offset-20">
                 <div class="col-xs-12 col-sm-12 col-md-12">
                     <div class="row darkBlueblackbackground padding-10">
-                        <h4 class="white-color" style="padding-left:5px;"><b>Schedule new meeting</b></h4>
+                        <h4 class="white-color pull-left" style="padding-left:5px;"><b>Schedule new meeting</b></h4>
+                        <div class="col-xs-12 col-sm-6 col-md-4 pull-right">
+                            <span class="glyphicon glyphicon-search form-control-feedback"></span>
+                            <input type="text" id="txtSearch" class="form-control pull-right" placeholder="Search" />
+                        </div>
                     </div>
                 </div>
             </div>
@@ -74,11 +77,12 @@
                                                         </label>
                                                     </div>
                                                 </th>
-                                                <th class="col-md-3" rowspan="3" style="width:40%;">Notification No.</th>
+                                                <th class="col-md-3" rowspan="3" style="width:35%;">Notification No.</th>
                                                 <th class="col-md-1 text-center" rowspan="3" style="width:10%;">Final Date of Comments</th>
                                                 <th class="col-md-1 text-center" rowspan="3" style="width:10%;">Country</th>
                                                 <th style="width:10%;"> Status</th>
-                                                <th class="text-center" rowspan="2" style="width:30%;">Note</th>
+                                                <th class="text-center" rowspan="2" style="width:20%;">Note</th>
+                                                <th class="text-center" rowspan="2" style="width:15%;">Group</th>
                                             </tr>
                                         </thead>
                                         <tbody class="whitebackground">
@@ -116,7 +120,10 @@
                                                             }
                                                         </td>
                                                         <td>
-                                                            <textarea class="form-control textboxcontrol AutoHeight" cols="30" rows="2" id="txtMeetingNote_@objMOM.ItemNumber">@objMOM.MeetingNote</textarea>
+                                                            <textarea class="form-control textboxcontrol AutoHeight" cols="30" rows="1" id="txtMeetingNote_@objMOM.ItemNumber">@objMOM.MeetingNote</textarea>
+                                                        </td>
+                                                        <td>
+                                                            <input type="text" class="form-control textboxcontrol" id="txtNotificationGroup_@objMOM.ItemNumber" value="@objMOM.NotificationGroup" />
                                                         </td>
                                                     </tr>
                                                 }
@@ -182,7 +189,7 @@
                             <div class='col-xs-12 col-sm-12 col-md-5'>
                                 <a class="btn btn-red pull-right" onclick="return ClosePopup();">Close&nbsp;<span class="glyphicon glyphicon-remove"></span></a>
                                 <a class="btn btn-dark-green pull-right" style="margin-right:15px;" onclick="GetAllNotifications(this);" data-CallFor="All"><img src="~/contents/img/save.png" />&nbsp;Save</a>
-                                <a class="btn btn-blue pull-right" id="btnSearchPopUp" style="margin-right:15px;" onclick="GetFilterNotification(this);" data-CallFor="All"><span class="glyphicon glyphicon-search"></span>&nbsp;Search</a>
+                                <a class="btn btn-blue pull-right" id="btnSearchPopUp" style="margin-right:15px;" onclick="GetFilterNotification(this);" data-CallFor="All|Popup"><span class="glyphicon glyphicon-search"></span>&nbsp;Search</a>
                             </div>
                         </div>
                         <div class="col-xs-12 col-sm-12 col-md-12 top-offset-10">
